Update the p tag /tag line

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="second">
         <h1>random password</h1>
         </div>
-        <p>never use a insecure password again.</p>
+        <p>Say Goodbye to Insecurities.</p>
         <button onclick="randomPassword(); randomPassword1();" >Generate passwords </button> 
         <!-- <input id ="btn" type="button" value="Generate passwords" onclick="randomPassword(); randomPassword1();"/> -->
         <div class="btn">
